GNOME Bugzilla – Bug 712691
We use application IDs instead of bus names
Last modified: 2013-11-19 18:24:08 UTC
commit abc15a8b1da35910c97f4b8542600f2e81bbbc28 Author: Christian Persch <chpe@gnome.org> Date: Sun May 27 14:42:02 2012 +0200 server: Use application IDs instead of bus names Now that we use GApplication without hacks, change --bus-name to --app-id. Even though we use application IDs instead of bus names now, there are some remnants of g_dbus_is_name. Those should be replaced with g_application_id_is_valid.
Created attachment 260254 [details] [review] client: legacy: We use application IDs instead of bus names
Comment on attachment 260254 [details] [review] client: legacy: We use application IDs instead of bus names Thanks for the review!