client: legacy: We use application IDs instead of bus names

Fallout from abc15a8b1da35910c97f4b8542600f2e81bbbc28

https://bugzilla.gnome.org/show_bug.cgi?id=712691